Small addition to my page content

--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello!Did you see me Bernito?</title>
+	<title>Hello!</title>
 </head>
 <body>
-<h1>Hello!</h1>
+<h1>Hello!Did you see me Bernito?</h1>
 </body>
 </html>
